my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/ENVAL/ENVAL.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENVAL.dml:54:1: In x
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENVAL.dml:54:11: error ENVAL: not a value: test
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENVAL.dml:39:7: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENVAL.dml:42:5: error ENVAL: not a value: m
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENVAL.dml:44:5: error ENVAL: not a value: a
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENVAL.dml:46:6: error ENVAL: not a value: b.r1
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENVAL.dml:48:9: error ENVAL: not a value: b.r2.f
